LU-19254 llite: disable splice support for reads

splice() used by nfsd can find pages with uptodate flag cleared
(for page being released) and that can cause zero data on the nfs
client side.

Provide a variant of file_operations that disables splice_read
when accessed via knfsd.  Since file_operations declarations are
becoming overly complex and redundant, add declare_file_operations()
macro to simplify them.

Do not select nosplice file_operations for calls to ll_iget_for_nfs()
called from userspace, since this is also used by lfs path2fid.

Lustre-change: https://review.whamcloud.com/60736
Lustre-commit: 54e7ec4660b7b8052d2c5443908161793a2d9e09

Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Signed-off-by: Andreas Dilger <adilger@whamcloud.com>
Change-Id: I34dca5bd7f88a6e3b1f90d7b740e33c6d42540e5
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/60961
Reviewed-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>