lustre/llite/lproc_llite.c
@@ -2727,6 +2727,7 @@ static const struct llite_file_opcode {
 		"hybrid_writesize_switch" },
 	{ LPROC_LL_HYBRID_READSIZE_SWITCH, LPROCFS_TYPE_REQS,
 		"hybrid_readsize_switch" },
+	{ LPROC_LL_SPLICE,	LPROCFS_TYPE_LATENCY,	"splice" },
 };
 
 void ll_stats_ops_tally(struct ll_sb_info *sbi, int op, long count)
